@@ -1,3 +1,14 @@
+2012-12-27 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCglue.c:
+	  Handle emission of long long constants.
+	  Emit error message for unknown sizes instead of failing silently.
+
+2012-12-27 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCval.c,
+	* sdcc_vc.h.in: moved strto(u)ll macros and fixed warnings
+
 2012-12-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/SDCCglue.c (emitOverlay): fixed bug #3596899
